Create order model

--- a/eBookStore/Views/Users/Login.cshtml
+++ b/eBookStore/Views/Users/Login.cshtml
@@ -2,11 +2,11 @@
 <form asp-action="Login">
     <div class="form-group">
         <label class="control-label"> User Name</label>
-        <input name="na" class="form-control" />
+        <input name="name" class="form-control" />
     </div>
     <div class="form-group">
-        <label for="pa" class="control-label"> User Password</label>
-        <input name="pa" type="password" class="form-control" /> <br />
+        <label for="pass" class="control-label"> User Password</label>
+        <input name="pass" type="password" class="form-control" /> <br />
     </div>
     <input type="submit" value="Login" class="btn btn-primary" />
 
