--- a/eBookStore/Views/Users/Create.cshtml
+++ b/eBookStore/Views/Users/Create.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Pass" class="control-label"></label>
+                <label asp-for="Pass" class="control-label">Password</label>
                 <input asp-for="Pass" class="form-control" />
                 <span asp-validation-for="Pass" class="text-danger"></span>
             </div>
