--- a/eBookStore/Views/Orders/CustomerOrders.cshtml
+++ b/eBookStore/Views/Orders/CustomerOrders.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<eBookStore.Models.Order>
 
 @{
-    ViewData["Title"] = "UserOrders";
+    ViewData["Title"] = "CustomerOrders";
 }
 
-<h1>UserOrders</h1>
+<h1>CustomerOrders</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -35,11 +35,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Orderdate)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
