--- a/eBookStore/Views/Users/Login.cshtml
+++ b/eBookStore/Views/Users/Login.cshtml
@@ -1,4 +1,14 @@
-﻿<h2>login</h2>
+﻿<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+
+</head>
+
+@{Layout = null;}
+
+<h2>login</h2>
 <form asp-action="Login">
     <div class="form-group">
         <label class="control-label"> User Name</label>
