--- a/eBookStore/Views/Users/Create.cshtml
+++ b/eBookStore/Views/Users/Create.cshtml
@@ -18,6 +18,13 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Role</label>
+                <select name="role" class="form-control" asp-for="Role">
+                    <option value="customer">Customer</option>
+                    <option value="admin">Admin</option>
+                </select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Pass" class="control-label">Password</label>
                 <input asp-for="Pass" class="form-control" />
                 <span asp-validation-for="Pass" class="text-danger"></span>
