--- a/eBookStore/Views/Shared/_Layout.cshtml
+++ b/eBookStore/Views/Shared/_Layout.cshtml
@@ -19,6 +19,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="AdminDashboard">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Create">Add Book</a>
                         </li>
                         <li class="nav-item">
