--- a/eBookStore/Views/Shared/_Layout.cshtml
+++ b/eBookStore/Views/Shared/_Layout.cshtml
@@ -28,10 +28,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Manage Books</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="CustomerReport">Order Reports</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="CustomerReport">Manage Orders</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Cutomers List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Manage Cutomers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="Index">Generate Reports</a>
                         </li>
                     </ul>
                 </div>
