save and display book category

--- a/eBookStore/Views/Books/Edit.cshtml
+++ b/eBookStore/Views/Books/Edit.cshtml
@@ -35,9 +35,15 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Catagory</label>
-                <select name="cataid" class="form-control" asp-for="Cataid">
-                    <option value="1">Computer Science</option>
-                    <option value="2">Computer Engineering</option>
+                <select name="category" class="form-control" asp-for="Category">
+                    <option value="Computer Science">Computer Science</option>
+                    <option value="Engineering">Engineering</option>
+                    <option value="Information Technology">Information Technology</option>
+                    <option value="Medicine">Medicine</option>
+                    <option value="Politics">Politics</option>
+                    <option value="Space Science">Space Science</option>
+                    <option value="Arts & Music">Arts & Music</option>
+                    <option value="Spirituality">Spirituality</option>
                 </select>
             </div>
             <div class="form-group">
