--- a/eBookStore/Views/Books/Details.cshtml
+++ b/eBookStore/Views/Books/Details.cshtml
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cataid)
+            @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cataid)
+            @Html.DisplayFor(model => model.Category)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Author)
