--- a/eBookStore/Views/Books/Catalogue.cshtml
+++ b/eBookStore/Views/Books/Catalogue.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Catalogue";
 }
 
-@{Layout = "~/Views/Shared/_Layout1.cshtml";}
+@{Layout = "~/Views/Shared/_LayoutCustomer.cshtml";}
 
 <h1>Catalogue</h1>
 <br />
