--- a/eBookStore/Views/Shared/_LayoutCustomer.cshtml
+++ b/eBookStore/Views/Shared/_LayoutCustomer.cshtml
@@ -28,6 +28,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Edit">Edit My Info</a>
                         </li>
                     </ul>
+                    <ul class="nav navbar-nav flex-grow-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Edit">Login</a>
+
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
