--- a/eBookStore/Views/Orders/Create.cshtml
+++ b/eBookStore/Views/Orders/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
+@{Layout = "~/Views/Shared/_LayoutCustomer.cshtml";}
+
 <h1>Create</h1>
 <hr />
 <dl class="row">
@@ -49,9 +51,9 @@
         Picture
     </dt>
     <dd>
-    <br />
-    <img src="~/images/@Model.Imgfile" height="150" />
-    <br />@Model.Imgfile
+        <br />
+        <img src="~/images/@Model.Imgfile" height="150" />
+        <br />@Model.Imgfile
 
     </dd>
 </dl>
