--- a/eBookStore/Views/Users/Edit.cshtml
+++ b/eBookStore/Views/Users/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-@{Layout = "~/Views/Shared/_Layout1.cshtml";}
+@{Layout = "~/Views/Shared/_LayoutCustomer.cshtml";}
 
 <h1>Edit</h1>
 
