Create home view and with login and register

--- a/eBookStore/Views/Orders/Create.cshtml
+++ b/eBookStore/Views/Orders/Create.cshtml
@@ -78,6 +78,6 @@
 </div>
 
 <div>
-    <a asp-controller="Books" asp-action="catalogue">Back to Catalogue</a>
+    <a asp-controller="Books" asp-action="catalogue">Back to Books</a>
 </div>
 
