--- a/eBookStore/Views/Users/Create.cshtml
+++ b/eBookStore/Views/Users/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
+@{Layout = "~/Views/Shared/_Layout.cshtml";}
+
 <h1>Create</h1>
 
 <h4>User</h4>
@@ -42,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    Already have an account? <a asp-action="Login">Login</a>
 </div>
 
 @section Scripts {
