show seperate layouts for admin and customer

--- a/eBookStore/Views/Books/Feedbacks.cshtml
+++ b/eBookStore/Views/Books/Feedbacks.cshtml
@@ -4,10 +4,12 @@
     ViewData["Title"] = "Feedbacks";
 }
 
+@{Layout = "~/Views/Shared/_LayoutAdmin.cshtml";}
+
 <h1>Feedbacks</h1>
 
 <div>
-    @if(Model.Any())
+    @if (Model.Any())
     {
         <h2>@Model.ToList()[0].BookName</h2><br />
         <img src="~/images/@Model.ToList()[0].Imgfile" height="150" />
@@ -18,7 +20,7 @@
 <div>
     @using (Html.BeginForm("CreateFeedback", "Books", FormMethod.Post))
     {
-    <span>Feedback: @Html.TextBox("feedbackText")</span> <span>Rating: @Html.TextBox("rating")</span> <input type="submit" value="Submit" /> <span>@Html.ActionLink("View all", "AllFeedbacks") | @Html.ActionLink("My feedbacks", "MyFeedbacks")</span>
+        <span>Feedback: @Html.TextBox("feedbackText")</span> <span>Rating: @Html.TextBox("rating")</span> <input type="submit" value="Submit" /> <span>@Html.ActionLink("View all", "AllFeedbacks") | @Html.ActionLink("My feedbacks", "MyFeedbacks")</span>
     }
 </div>
 <br />
