--- a/eBookStore/Views/Home/Index.cshtml
+++ b/eBookStore/Views/Home/Index.cshtml
@@ -39,9 +39,9 @@
                             price:@item.Price
                         </div>
                         <div class="card-footer">
-                            <a asp-controller="Users" asp-action="Login" asp-route-id="@item.Id">Buy</a> |
+                            <a asp-controller="Users" asp-action="Login" asp-route-id="@item.Id">Add to cart</a> |
                             <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                            <a asp-controller="Users" asp-action="Login" asp-route-id="@item.Id">Buy</a>
+                            <a asp-controller="Users" asp-action="Login" asp-route-id="@item.Id">Feedbacks</a>
                         </div>
                     </div>
                 </div>
