--- a/eBookStore/Views/Shared/_LayoutCustomer.cshtml
+++ b/eBookStore/Views/Shared/_LayoutCustomer.cshtml
@@ -27,11 +27,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Edit">Edit My Info</a>
                         </li>
-                    </ul>
-                    <ul class="nav navbar-nav flex-grow-0">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Edit">Login</a>
-
+                        <li class="nav-item justify-content-end">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Logout</a>
                         </li>
                     </ul>
                 </div>
