--- a/eBookStore/Views/Reports/Index.cshtml
+++ b/eBookStore/Views/Reports/Index.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "GenerateReports";
 }
 
+@{Layout = "~/Views/Shared/_LayoutAdmin.cshtml";}
+
 <h1>Generate Reports</h1>
 
 <h2>
