--- a/eBookStore/Views/Shared/_LayoutAdmin.cshtml
+++ b/eBookStore/Views/Shared/_LayoutAdmin.cshtml
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="Index">Generate Reports</a>
                         </li>
+                        <li class="nav-item justify-content-end">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Logout</a>
+                        </li>
                     </ul>
                 </div>
             </div>
