Generate feedbacks report

--- a/eBookStore/Views/Reports/Index.cshtml
+++ b/eBookStore/Views/Reports/Index.cshtml
@@ -16,3 +16,6 @@
 <h2>
     @Html.ActionLink("Generate Order Report", "GenerateOrderReport", "Reports")
 </h2>
+<h2>
+    @Html.ActionLink("Generate Feedback Report", "GenerateFeedbackReport", "Reports")
+</h2>
