Complete cart page

--- a/eBookStore/Views/Books/Index.cshtml
+++ b/eBookStore/Views/Books/Index.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
-@{Layout = "~/Views/Shared/_LayoutAdmin.cshtml";}
+@{Layout = "~/Views/Shared/_LayoutAdmin" +
+                  ".cshtml";}
 
 <h1>Index</h1>
 
