--- a/eBookStore/Views/Shared/_LayoutCustomer.cshtml
+++ b/eBookStore/Views/Shared/_LayoutCustomer.cshtml
@@ -22,13 +22,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Catalogue"> Books</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Cart">Cart</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="MyOrders">My Orders</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Edit">Edit My Info</a>
                         </li>
                         <li class="nav-item justify-content-end">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Logout</a>
+                            <a class="nav-link text-light btn btn-secondary" asp-area="" asp-controller="Home" asp-action="Index">Logout</a>
                         </li>
                     </ul>
                 </div>
