--- a/eBookStore/Views/Shared/_Layout.cshtml
+++ b/eBookStore/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"> Books</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Login"> Login</a>
+                            <a class="nav-link text-light btn btn-secondary" asp-area="" asp-controller="Users" asp-action="Login"> Login</a>
                         </li>
                     </ul>
                 </div>
