--- a/eBookStore/Views/Shared/_LayoutAdmin.cshtml
+++ b/eBookStore/Views/Shared/_LayoutAdmin.cshtml
@@ -37,7 +37,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="Index">Generate Reports</a>
                         </li>
                         <li class="nav-item justify-content-end">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Logout</a>
+                            <a class="nav-link text-light btn btn-secondary" asp-area="" asp-controller="Home" asp-action="Index">Logout</a>
                         </li>
                     </ul>
                 </div>
