index minor changes

--- a/eBookStore/Views/Home/Index.cshtml
+++ b/eBookStore/Views/Home/Index.cshtml
@@ -160,7 +160,7 @@
                                 <div class="single-slide">
                                     <div class="product-card">
                                         <div class="product-header">
-                                            <a href="" class="author"> @item.Author </a>
+                                            <a class="author"> @item.Author </a>
                                             <h3>
                                                 <a asp-action="Details" asp-route-id="@item.Id">  @item.Title </a>
                                             </h3>
@@ -257,7 +257,6 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col-lg-7">
-                        <!-- <h2>I Love This Idea!</h2> -->
                         <h3>"A book is a gift you can open again and again."</h3>
                         <h5>-Garrison Keillor</h5>
                     </div>
